fixed bug on tablets video

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,6 @@ html,
 body {
     padding: 0 !important;
     margin: 0 !important;
-    background-color: black;
     z-index: -50;
 }
 
